--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -57,6 +57,9 @@
     background-color: #1775ee;
     cursor: pointer;
 }
+.loginButton:disabled{
+    cursor: not-allowed;
+}
 .loginForgot{
     text-align: center;
     color: #1775ee;
